force-app/main/default/objects/Account/fields/Acc_Record_Type__c.field-meta.xml
<CustomField>
    <fullName>Acc_Record_Type__c</fullName>
    <label>Acc Record Type</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Master</fullName>
            </value>
            <value>
                <fullName>Child</fullName>
            </value>
            <value>
                <fullName>Affiliate</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>