force-app/main/default/objects/Account/fields/Acc_Sub_Type__c.field-meta.xml
<CustomField>
    <fullName>Acc_Sub_Type__c</fullName>
    <label>Acc Sub Type</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>One</fullName>
            </value>
            <value>
                <fullName>Two</fullName>
            </value>
            <value>
                <fullName>Three</fullName>
            </value>
            <value>
                <fullName>Legacy Master</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>