force-app/main/default/objects/Account/fields/Express_Path_Criteria__c.field-meta.xml
<CustomField>
    <fullName>Express_Path_Criteria__c</fullName>
    <label>Express Path Criteria</label>
    <type>Picklist</type>
    <valueSet>
        <controllingField>Manual_Check_of_Validation__c</controllingField>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>YES</fullName>
            </value>
            <value>
                <fullName>NO</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>