force-app/main/default/objects/Account/fields/Login_Time__c.field-meta.xml
<CustomField>
    <fullName>Login_Time__c</fullName>
    <formula>TIMEVALUE(&quot;6:00:00.000&quot;)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Login_Time</label>
    <type>Time</type>
</CustomField>