force-app/main/default/objects/Account/fields/Logout_Time__c.field-meta.xml
<CustomField>
    <fullName>Logout_Time__c</fullName>
    <formula>TIMEVALUE(&quot;20:00:00.000&quot;)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Logout_Time</label>
    <type>Time</type>
</CustomField>