force-app/main/default/objects/Account/fields/Manual_Check_of_Validation__c.field-meta.xml
<CustomField>
    <fullName>Manual_Check_of_Validation__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Manual Check of Validation</label>
    <type>Checkbox</type>
</CustomField>