force-app/main/default/objects/Account/fields/Master_Agreement__c.field-meta.xml
<CustomField>
    <fullName>Master_Agreement__c</fullName>
    <label>Master Agreement</label>
    <length>255</length>
    <type>Text</type>
</CustomField>