force-app/main/default/objects/Account/fields/Path_Criteria_Not_Met__c.field-meta.xml
<CustomField>
    <fullName>Path_Criteria_Not_Met__c</fullName>
    <label>Path Criteria Not Met</label>
    <type>Picklist</type>
    <valueSet>
        <controllingField>Express_Path_Criteria__c</controllingField>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Exception</fullName>
            </value>
            <value>
                <fullName>Scope</fullName>
            </value>
            <value>
                <fullName>Term</fullName>
            </value>
            <value>
                <fullName>Impact</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>