force-app/main/default/objects/Account/fields/Test_1__c.field-meta.xml
<CustomField>
    <fullName>Test_1__c</fullName>
    <label>Test 1</label>
    <precision>5</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>