force-app/main/default/objects/Account/fields/Test__c.field-meta.xml
<CustomField>
    <fullName>Test__c</fullName>
    <label>Test 4</label>
    <precision>5</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>