force-app/main/default/objects/Account/fields/Test_Date_Time__c.field-meta.xml
<CustomField>
    <fullName>Test_Date_Time__c</fullName>
    <label>Test_Date_Time</label>
    <type>DateTime</type>
</CustomField>