force-app/main/default/objects/Account/fields/Test_Restrict_Picklist__c.field-meta.xml
<CustomField>
    <fullName>Test_Restrict_Picklist__c</fullName>
    <label>Test Restrict Picklist</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Test 1</fullName>
            </value>
            <value>
                <fullName>Test 2</fullName>
            </value>
            <value>
                <fullName>Test 3</fullName>
            </value>
            <value>
                <fullName>Test 4</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>